--- a/public/index.html
+++ b/public/index.html
@@ -97,17 +97,17 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="./cad.html" class="nav-link active">
-                                        <i class="far fa-circle nav-icon"></i>
+                                    <a href="./cad.html" class="nav-link ">
+                                        <i class="fas fa-plus nav-icon"></i>
                                         <p>Cadastrar</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="./viewModel.html" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
+                                        <i class="fas fa-eye nav-icon"></i>
                                         <p>Visualizar</p>
                                     </a>
-                                </li>
+                                </li>                                
                             </ul>
                         </li>
                     </ul>
@@ -177,9 +177,7 @@
         $.widget.bridge('uibutton', $.ui.button)
     </script>
     <!-- Bootstrap 4 -->
-    <script src="../assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Tempusdominus Bootstrap 4 -->
-    <script src="../assets/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="../assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>   
     <!-- overlayScrollbars -->
     <script src="../assets/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
     <!-- AdminLTE App -->
